[package]
name = "data-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.16"
crossbeam-channel = "0.5.13"
directories = "5.0.1"
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread"] }
